# ccalculator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  mcp.rs  persist.rs  repl.rs  script.rs  tui.rs
crates/cli/tests/: e2e.rs
crates/core/: Cargo.toml
crates/core/src/: ast.rs  engine.rs  format.rs  lexer.rs  lib.rs  number.rs  parser.rs  theme.rs  units.rs  value.rs
crates/core/tests/: engine_tests.rs
