[package]
name = "ccalc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Console Calculator: a powerful calculator with a simple console interface."

[[bin]]
name = "ccalc"
path = "src/main.rs"

[dependencies]
ccalc-core = { path = "../core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
ratatui = "0.28"
